2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Delete command
	  now doesn't delete the whole line when nothing is selected.

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: Optimized &
	  improved the behavior of the class quick finder.

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  533918 - Scroll position "jumps" first time editor tab is
	  shown'.

2009-09-24  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj: Fix build.

2009-09-24  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj: Removed nrefactory
	  reference.

2009-09-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Fixed menu
	  positioning.

2009-09-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Semantic
	  highlighting requires to purge the layout cache, when the
	  parser updates to reflect semantic changes.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  537761 - Keystrokes not working on texteditor like "CTRL +
	  X|Y to trigger Foo action...'.

2009-09-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Check that
	  help is supported before trying to show it.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  540487 - Event handler anon delegate completion puts caret
	  in wrong place'.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Removed code
	  duplication/fixed folding commands.

2009-09-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Renamed
	  IDomVisitable -> INode
